compiler/toc-hir-lowering/tests/snapshots/lowering__lower_deref_expr-3.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 61
expression: "var a : int var _ := ^ "

---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(2)
    Module@(FileId(1), 0..23): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..22): []
        StmtItem@(FileId(1), 0..11): ItemId(0)
          ConstVar@(FileId(1), 0..11): var "a"@(FileId(1), 4..5)
            Primitive@(FileId(1), 8..11): Int
        StmtItem@(FileId(1), 12..22): ItemId(1)
          ConstVar@(FileId(1), 12..22): var "_"@(FileId(1), 16..17)
            ExprBody@(FileId(1), 21..22)
              Deref@(FileId(1), 21..22)
error in file FileId(1) at 21..22: unexpected end of file
| error in file FileId(1) for 21..22: expected expression after here

