compiler/toc-hir-lowering/tests/snapshots/lowering__lower_deref_expr-4.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 61
expression: "var a : int var _ := ^^^^a "

---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(2)
    Module@(FileId(1), 0..27): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..26): []
        StmtItem@(FileId(1), 0..11): ItemId(0)
          ConstVar@(FileId(1), 0..11): var "a"@(FileId(1), 4..5)
            Primitive@(FileId(1), 8..11): Int
        StmtItem@(FileId(1), 12..26): ItemId(1)
          ConstVar@(FileId(1), 12..26): var "_"@(FileId(1), 16..17)
            ExprBody@(FileId(1), 21..26)
              Deref@(FileId(1), 21..26)
                Deref@(FileId(1), 22..26)
                  Deref@(FileId(1), 23..26)
                    Deref@(FileId(1), 24..26)
                      Name@(FileId(1), 25..26): "a"@(FileId(1), 4..5)

