compiler/toc-hir-lowering/tests/snapshots/lowering__lower_deref_expr-5.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 61
expression: "var a : int ^a()"

---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..16): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..16): []
        StmtItem@(FileId(1), 0..11): ItemId(0)
          ConstVar@(FileId(1), 0..11): var "a"@(FileId(1), 4..5)
            Primitive@(FileId(1), 8..11): Int
        CallStmt@(FileId(1), 12..16): [...]
          Deref@(FileId(1), 12..14)
            Name@(FileId(1), 13..14): "a"@(FileId(1), 4..5)

