compiler/toc-hir-lowering/tests/snapshots/lowering__lower_deref_expr.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "var a : int var _ := ^a "
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(2)
    Module@(src/main.t:0..24): "<root>"@(dummy)
      StmtBody@(src/main.t:0..23): []
        StmtItem@(src/main.t:0..11): ItemId(0)
          ConstVar@(src/main.t:0..11): var "a"@(src/main.t:4..5)
            Primitive@(src/main.t:8..11): Int
        StmtItem@(src/main.t:12..23): ItemId(1)
          ConstVar@(src/main.t:12..23): var "_"@(src/main.t:16..17)
            ExprBody@(src/main.t:21..23)
              Deref@(src/main.t:21..23)
                Name@(src/main.t:22..23): "a"@(src/main.t:4..5)
