compiler/toc-hir-lowering/tests/snapshots/lowering__lower_enum_type-5.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "type _ : enum(, a)"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..18): "<root>"@(dummy)
      StmtBody@(src/main.t:0..18): []
        StmtItem@(src/main.t:0..18): ItemId(0)
          Type@(src/main.t:0..18): "_"@(src/main.t:5..6)
            Enum@(src/main.t:9..18): "_"@(src/main.t:9..18) [ a ]
error at src/main.t:14..15: unexpected token
| error for src/main.t:14..15: expected identifier, but found `,`
