compiler/toc-hir-lowering/tests/snapshots/lowering__lower_exit_stmt-2.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "for i : 1 .. 10 exit end for"

---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..28): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..28): []
        For@(FileId(1), 0..28): explicit
          Literal@(FileId(1), 8..9): Integer(1)
          Literal@(FileId(1), 13..15): Integer(10)
          Exit@(FileId(1), 16..20)

