compiler/toc-hir-lowering/tests/snapshots/lowering__lower_field_expr-2.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "\n    module a end a\n    a.\n    "
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..31): "<root>"@(dummy)
      StmtBody@(src/main.t:5..26): []
        StmtItem@(src/main.t:5..19): ItemId(0)
          Module@(src/main.t:5..19): "a"@(src/main.t:12..13)
            StmtBody@(src/main.t:14..14): []
        CallStmt@(src/main.t:24..26): [no params]
error at src/main.t:25..26: unexpected end of file
| error for src/main.t:25..26: expected identifier after here
