compiler/toc-hir-lowering/tests/snapshots/lowering__lower_field_expr.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "\n    module a end a\n    a.b\n    "
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..32): "<root>"@(dummy)
      StmtBody@(src/main.t:5..27): []
        StmtItem@(src/main.t:5..19): ItemId(0)
          Module@(src/main.t:5..19): "a"@(src/main.t:12..13)
            StmtBody@(src/main.t:14..14): []
        CallStmt@(src/main.t:24..27): [no params]
          Field@(src/main.t:24..27): field "b"
            Name@(src/main.t:24..25): "a"@(src/main.t:12..13)
