compiler/toc-hir-lowering/tests/snapshots/lowering__lower_for_stmt-4.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "var wah : int for : wah by 1 end for"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..36): "<root>"@(dummy)
      StmtBody@(src/main.t:0..36): []
        StmtItem@(src/main.t:0..13): ItemId(0)
          ConstVar@(src/main.t:0..13): var "wah"@(src/main.t:4..7)
            Primitive@(src/main.t:10..13): Int
        For@(src/main.t:14..36): implicit
          Name@(src/main.t:20..23): "wah"@(src/main.t:4..7)
          Literal@(src/main.t:27..28): Integer(1)
